# charged_particle_simulator

charged_particle_simulator/charged_particle_sim/: BUILD_STATUS.md  BUILD_WINDOWS.md  CMakeLists.txt  GLAD_SETUP.md  GLAD_STATUS.md  README.md  build_release.bat  build_windows.bat
charged_particle_simulator/charged_particle_sim/docs/: ARCHITECTURE.md  DISTRIBUTION.md  PHYSICS_FORMULAS.md  REACT_DOWNLOAD_EXAMPLE.md
charged_particle_simulator/charged_particle_sim/engine/core/: Constants.hpp  InputManager.cpp  InputManager.hpp  Logger.cpp  Logger.hpp
charged_particle_simulator/charged_particle_sim/engine/interaction/: Camera.cpp  Camera.hpp  DragController.cpp  DragController.hpp  ParticlePicker.cpp  ParticlePicker.hpp  RayCaster.cpp  RayCaster.hpp
charged_particle_simulator/charged_particle_sim/engine/math/: Integrators.cpp  Integrators.hpp
charged_particle_simulator/charged_particle_sim/engine/physics/: ElectricField.cpp  ElectricField.hpp  FieldLineGenerator.cpp  FieldLineGenerator.hpp  FieldLineManager.cpp  FieldLineManager.hpp  Particle.cpp  Particle.hpp
charged_particle_simulator/charged_particle_sim/engine/render/: FieldLineRenderer.cpp  FieldLineRenderer.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp
charged_particle_simulator/charged_particle_sim/engine/scene/: ParticleSystem.cpp  ParticleSystem.hpp
charged_particle_simulator/charged_particle_sim/src/: main.cpp
charged_particle_simulator/charged_particle_sim/tests/: test_coulomb.cpp
charged_particle_simulator/dependencies/glad/: glad.h
